--- a/index.html
+++ b/index.html
@@ -1,26 +1,108 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Chat</title>
+  <style>
+    body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+  
+  .chat-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+  }
+  
+  .chat-header {
+    padding: 20px;
+    background-color: #f0f0f0;
+    text-align: center;
+  }
+  
+  .chat-history {
+    flex: 1; /* Make this section take up most of the space */
+    overflow-y: scroll; /* Enable scrolling for long chat history */
+    padding: 20px;
+  }
+  
+  .chat-message {
+    margin-bottom: 10px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #eee;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .chat-message.sent-by-me {
+    background-color: #ddd;
+    text-align: right;
+  }
+  
+  .chat-message .username {
+    font-weight: bold;
+  }
+  
+  .chat-input {
+    padding: 20px;
+    display: flex;
+  }
+  
+  .chat-input input[type="text"] {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .chat-input button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  /* Media queries for responsive design */
+  
+  
+  
+  /* Responsive chat area */
+  
+  #chat-messages {
+    list-style: none; /* Remove default bullet points */
+    padding: 0;
+    margin: 0;
+  }
+  
+    #chat-messages { list-style-type: none; margin: 0; padding: 0; }
+      #chat-messages > li { padding: 0.5rem 1rem; }
+      #chat-messages > li:nth-child(odd) { background: #efefef; }
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-  </head>
-  <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+  </style>
+</head>
+<body>
+  <div class="chat-container">
+    <header class="chat-header">
+      <h1>Simple Chat</h1>
+    </header>
+    <main class="chat-history">
+      <ul id="chat-messages">
+  
+      </ul>
+    </main>
+    <form id="form" class="chat-input" action="#">
+      <input id="input" type="text" name="message" placeholder="Type your message..." required>
+      <button type="submit">Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
+  </div>
+  <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io();
   var form = document.getElementById('form');
@@ -35,6 +117,7 @@
   });
 
   socket.on('chat message', function(msg) {
+    let messages=document.getElementById("chat-messages");
     var item = document.createElement('li');
     item.textContent = msg;
     messages.appendChild(item);
